--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,11 @@
 <html lang="en">
 	<head>
 		<title>HELLO</title>
+		<style>
+			h1{
+				color:blue;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>expo</h1>
